2020-12-19  7.0.10-53  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-53 GIT revision 18...

2020-12-39  7.0.10-53  <quetzlzacatenango@image...>
  * CSS colors no longer require commas.
  * eliminate possible arthimetic overflow (reference
    https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=28849)
  * support display-p3 colorspace

2020-12-19  7.0.10-52  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-52 GIT revision 18057:1f5bab30b:20201219

2020-12-19  7.0.10-52  <quetzlzacatenango@image...>
  * return alpha bytes with stream utility (reference
    https://github.com/ImageMagick/ImageMagick/discussions/2862).
  * percentage -border in x no longer adds one pixel border in y (reference
    https://github.com/ImageMagick/ImageMagick/issues/2978).

2020-12-18  7.0.10-51  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-51 GIT revision 18052:475508769:20201218

2020-12-17  7.0.10-51  <quetzlzacatenango@image...>
  * reduce time to identify PDF/PS/XPS/PCL image width/height (reference
    https://github.com/ImageMagick/ImageMagick/discussions/2993).

2020-12-16  7.0.10-50  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-50 GIT revision 18046:83c162886:20201216

2020-12-15  7.0.10-50  <quetzlzacatenango@image...>
  * revert patch to ready gray alpha TIFF image.

2020-12-14  7.0.10-49  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-49 GIT revision 18040:7976abf6e:20201214

2020-12-13  7.0.10-49  <quetzlzacatenango@image...>
  * correct previous patch to read planar RGB TIFF images.

2020-12-10  7.0.10-48  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-48 GIT revision 18026:4646e5fd1:20201210

2020-12-09  7.0.10-48  <quetzlzacatenango@image...>
  * Repair unit test failures (reference
    https://github.com/ImageMagick/ImageMagick/issues/2959).

2020-12-09  7.0.10-47  <quetzlzacatenango@image...>